--- a/Steam Desktop Authenticator/packages.config
+++ b/Steam Desktop Authenticator/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cef.redist.x64" version="3.2454.1344" targetFramework="net452" />
+  <package id="cef.redist.x86" version="3.2454.1344" targetFramework="net452" />
+  <package id="CefSharp.Common" version="45.0.0" targetFramework="net452" />
+  <package id="CefSharp.WinForms" version="45.0.0" targetFramework="net452" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net452" />
