--- a/Steam Desktop Authenticator/Steam Desktop Authenticator.csproj
+++ b/Steam Desktop Authenticator/Steam Desktop Authenticator.csproj
@@ -127,6 +127,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrowserRequestHandler.cs" />
+    <Compile Include="ConfirmationFormWeb.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConfirmationFormWeb.Designer.cs">
+      <DependentUpon>ConfirmationFormWeb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DeleteAllCookiesVisitor.cs" />
     <Compile Include="FileEncryptor.cs" />
     <Compile Include="CaptchaForm.cs">
       <SubType>Form</SubType>
@@ -163,6 +171,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CaptchaForm.resx">
       <DependentUpon>CaptchaForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConfirmationFormWeb.resx">
+      <DependentUpon>ConfirmationFormWeb.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InputForm.resx">
       <DependentUpon>InputForm.cs</DependentUpon>
