--- a/Steam Desktop Authenticator/Steam Desktop Authenticator.csproj
+++ b/Steam Desktop Authenticator/Steam Desktop Authenticator.csproj
@@ -115,6 +115,13 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Manifest.cs" />
+    <Compile Include="PhoneBridge.cs" />
+    <Compile Include="PhoneExtractForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PhoneExtractForm.Designer.cs">
+      <DependentUpon>PhoneExtractForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CaptchaForm.resx">
@@ -131,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PhoneExtractForm.resx">
+      <DependentUpon>PhoneExtractForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
