--- a/Steam Desktop Authenticator/App.config
+++ b/Steam Desktop Authenticator/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup> 
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <system.net>
     <settings>
-      <httpWebRequest useUnsafeHeaderParsing="true" />
+      <httpWebRequest useUnsafeHeaderParsing="true"/>
     </settings>
   </system.net>
 </configuration>
