--- a/Steam Desktop Authenticator/packages.config
+++ b/Steam Desktop Authenticator/packages.config
@@ -4,5 +4,9 @@
   <package id="cef.redist.x86" version="3.2454.1344" targetFramework="net452" />
   <package id="CefSharp.Common" version="45.0.0" targetFramework="net452" />
   <package id="CefSharp.WinForms" version="45.0.0" targetFramework="net452" />
+  <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Splat" version="1.6.2" targetFramework="net452" />
+  <package id="squirrel.windows" version="1.2.1" targetFramework="net452" />
 </packages>
