--- a/Steam Desktop Authenticator/Steam Desktop Authenticator.csproj
+++ b/Steam Desktop Authenticator/Steam Desktop Authenticator.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="packages\CefSharp.WinForms.45.0.0\build\CefSharp.WinForms.props" Condition="Exists('packages\CefSharp.WinForms.45.0.0\build\CefSharp.WinForms.props')" />
   <Import Project="packages\CefSharp.Common.45.0.0\build\CefSharp.Common.props" Condition="Exists('packages\CefSharp.Common.45.0.0\build\CefSharp.Common.props')" />
@@ -127,6 +127,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BrowserRequestHandler.cs" />
+    <Compile Include="ConfirmationFormList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConfirmationFormList.Designer.cs">
+      <DependentUpon>ConfirmationFormList.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConfirmationFormWeb.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,11 +147,17 @@
     <Compile Include="CaptchaForm.Designer.cs">
       <DependentUpon>CaptchaForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ImportAccountForm.cs">
+    <Compile Include="ImportSaFileForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ImportAccountForm.Designer.cs">
-      <DependentUpon>ImportAccountForm.cs</DependentUpon>
+    <Compile Include="ImportSaFileForm.Designer.cs">
+      <DependentUpon>ImportSaFileForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ImportMaFileForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImportMaFileForm.Designer.cs">
+      <DependentUpon>ImportMaFileForm.cs</DependentUpon>
     </Compile>
     <Compile Include="InputForm.cs">
       <SubType>Form</SubType>
@@ -208,11 +220,17 @@
     <EmbeddedResource Include="CaptchaForm.resx">
       <DependentUpon>CaptchaForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ConfirmationFormList.resx">
+      <DependentUpon>ConfirmationFormList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ConfirmationFormWeb.resx">
       <DependentUpon>ConfirmationFormWeb.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ImportAccountForm.resx">
-      <DependentUpon>ImportAccountForm.cs</DependentUpon>
+    <EmbeddedResource Include="ImportMaFileForm.resx">
+      <DependentUpon>ImportMaFileForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImportSaFileForm.resx">
+      <DependentUpon>ImportSaFileForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InputForm.resx">
       <DependentUpon>InputForm.cs</DependentUpon>
