Added language, modified InputForm to support locales
- Modified InputForm's constructor to allow directly entering an entry's key to translate
- Added spanish .slf file (testing)
- Further implementing locale to MainForm

--- a/Steam Desktop Authenticator/Steam Desktop Authenticator.csproj
+++ b/Steam Desktop Authenticator/Steam Desktop Authenticator.csproj
@@ -265,6 +265,9 @@
     <None Include="sdalocales\en_GB.slf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="sdalocales\es_ES.slf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
