--- a/Steam Desktop Authenticator/packages.config
+++ b/Steam Desktop Authenticator/packages.config
@@ -5,4 +5,5 @@
   <package id="CefSharp.Common" version="45.0.0" targetFramework="net452" />
   <package id="CefSharp.WinForms" version="45.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
 </packages>
