--- a/Steam Desktop Authenticator/packages.config
+++ b/Steam Desktop Authenticator/packages.config
@@ -4,5 +4,6 @@
   <package id="cef.redist.x86" version="3.2987.1601" targetFramework="net452" />
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net452" />
   <package id="CefSharp.WinForms" version="57.0.0" targetFramework="net452" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
 </packages>
