feat: implemented a steam desktop authenticator fix until Jessecar96 do it.

--- a/Steam Desktop Authenticator/packages.config
+++ b/Steam Desktop Authenticator/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="3.3239.1723" targetFramework="net462" />
-  <package id="cef.redist.x86" version="3.3239.1723" targetFramework="net462" />
-  <package id="CefSharp.Common" version="63.0.3" targetFramework="net462" />
-  <package id="CefSharp.WinForms" version="63.0.3" targetFramework="net462" />
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net462" />
+  <package id="cef.redist.x64" version="3.3239.1723" targetFramework="net472" />
+  <package id="cef.redist.x86" version="3.3239.1723" targetFramework="net472" />
+  <package id="CefSharp.Common" version="63.0.3" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="63.0.3" targetFramework="net472" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.48" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
 </packages>
