--- a/Steam Desktop Authenticator/packages.config
+++ b/Steam Desktop Authenticator/packages.config
@@ -1,9 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="3.3239.1723" targetFramework="net472" />
-  <package id="cef.redist.x86" version="3.3239.1723" targetFramework="net472" />
-  <package id="CefSharp.Common" version="63.0.3" targetFramework="net472" />
-  <package id="CefSharp.WinForms" version="63.0.3" targetFramework="net472" />
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net472" />
+  <package id="cef.redist.x64" version="3.3239.1723" targetFramework="net462" />
+  <package id="cef.redist.x86" version="3.3239.1723" targetFramework="net462" />
+  <package id="CefSharp.Common" version="63.0.3" targetFramework="net462" />
+  <package id="CefSharp.WinForms" version="63.0.3" targetFramework="net462" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net462" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
+  <package id="protobuf-net" version="3.2.16" targetFramework="net472" />
+  <package id="protobuf-net.Core" version="3.2.16" targetFramework="net472" />
+  <package id="SteamKit2" version="2.5.0-Beta.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="7.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
 </packages>
